# fastapi-mail

./: pyproject.toml
fastapi_mail/email_utils/: email_check.py
