[tool.poetry]
name = "fastapi-mail"
version = "0.4.1"
description = "Simple lightweight mail library for FastApi"
authors = ["Sabuhi Shukurov <sabuhi.shukurov@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sabuhish/fastapi-mail"
repository = "https://github.com/sabuhish/fastapi-mail"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "*"
fastapi = "*"
Jinja2 = "*"
aiosmtplib = "*"
pydantic = "*"
email-validator = "*"
httpx = "*"
blinker = "*"
python-multipart = "*"

[tool.poetry.dev-dependencies]
aioredis = "*"
fakeredis = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-cov = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocs-markdownextradata-plugin = "*"
isort = "*"
blue = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.blue]
line-length = 100
